# reserva-comigo

./: README.md  backup.json  backup2.json  backup4.json  calendario.db  calendario.html  manage.py  pyproject.toml
cliente/: urls.py
cliente/templates/: init_page_usuario.html
cliente_app/: forms.py  models.py  urls.py  views.py
cliente_app/migrations/: 0001_initial.py  0002_alter_grupo_data_hora_alter_grupo_duracao_and_more.py  0002_friendship.py  0002_grupo_membros.py  0002_remove_grupo_data_hora_grupo_ano_grupo_dia_grupo_mes_and_more.py  0003_remove_grupo_criador_remove_membrogrupo_grupo_and_more.py
cliente_app/templates/: criar_grupo.html  feed.html  grupo_infos.html  grupos.html  profile_edit.html
estab_app/: apps.py  forms.py  models.py  urls.py  views.py
estab_app/migrations/: 0001_initial.py  0002_datadisponibilidade_delete_disponibilidade.py  0002_remove_diamarcado_grupo_id.py  0003_diamarcado_delete_datadisponibilidade.py
estab_app/templates/: grupos.html  notificacoes.html  pagina_estab.html  pagina_estab_cliente.html  pagina_estab_estab.html
estabelecimento/: urls.py
main/: urls.py  views.py
main/templates/: base_cliente.html  base_estab.html  usermenu.html
reserva_app/: apps.py  models.py  urls.py  views.py
reserva_app/migrations/: 0001_initial.py
reserva_projeto/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
users/: admin.py  backends.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_estabelecimento_options_and_more.py  0002_alter_userprofile_latitude_and_more.py  (+16 more)
(+66 files in other folders)
