[tool.poetry]
name = "reserva-comigo"
version = "0.1.0"
description = ""
authors = ["Angelo Miguel Requenha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
googlemaps = "^4.10.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
