[tool.poetry]
name = "reserva-comigo"
version = "0.1.0"
description = ""
authors = ["Victor Luís Zuchi <zuchii.victor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
googlemaps = "^4.10.0"
requests = "^2.31.0"
django-places = "^0.1"
django-bower = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
